--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -1,14 +1,37 @@
+@import '../../assets/styles/variables.scss';
+
 .container {
-    width: 100px;
-    height: 200px;
+    position: relative;
+    padding: 10% 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 5px;
+    width: 300px;
+    height: 500px;
+    font-family: $font;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    background-color: #fff;
 }
 
 .title {
-    font-size: large;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.title, 
+.year, 
+.creator, 
+.rating, 
+.runtime_in_minutes,
+.episodes {
+    color: #00008B;
 }
 
 .closeBtn,
 .likeBtn {
+    position: absolute;
     width: 50px;
     height: 50px;
     border: none;
@@ -16,6 +39,18 @@
     cursor: pointer;
 }
 
+.closeBtn {
+    top: 10px;
+    right: 10px;
+}
+
 .likeBtn {
+    right: 10px;
+    bottom: 10px;
     color: 	#FF0000;
+}
+
+.img {
+    border-radius: 5px;
+    width: 200px;
 }
