--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -6,8 +6,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     row-gap: 5px;
     width: 300px;
+    max-height: fit-content;
     height: 500px;
     font-family: $font;
     border: 1px solid #fff;
