--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -2,19 +2,25 @@
 
 .container {
     position: relative;
-    padding: 5% 10px 10px 10px;
+    padding: 5% 20px 5% 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
     row-gap: 5px;
-    width: 300px;
-    max-height: fit-content;
-    height: 500px;
+    width: 350px;
+    min-height: 620px;
+    height: fit-content;
     font-family: $font;
     border: 1px solid #fff;
     border-radius: 20px;
     background-color: #fff;
+    box-sizing: border-box;
+
+    &:hover {
+        filter: drop-shadow(0px 7px 7px rgba(0, 0, 0, 0.559));
+    }
 }
 
 .title {
@@ -27,7 +33,8 @@
 .creator, 
 .rating, 
 .runtime_in_minutes,
-.episodes {
+.episodes,
+.description {
     color: #00008B;
 }
 
@@ -54,5 +61,10 @@
 
 .img {
     border-radius: 5px;
-    width: 200px;
+    width: 250px;
+    cursor: pointer;
+}
+
+.description {
+    cursor: pointer;
 }
