--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 30px 20px 30px 20px;
 }
 
 .title {
